[package]
name = "rsakeygen"
version = "0.1.2"
edition = "2021"
description = "A cli tool to generate 12 word seedphrase and associating RSA key pairs"
license = "MIT"
repository = "https://github.com/supersanta183/rsa_keygen_cli"
homepage = "https://github.com/supersanta183/rsa_keygen_cli"
keywords = ["rsa", "keygen", "cli", "seedphrase"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
clap = { version = "4.5.4", features = ["derive"]}
rsa = "0.9.6"
rsa_keygen = "1.0.6"
